LHC results updated
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4730 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -11,6 +11,8 @@ What is important is the relative position between RP sensors (the other parts d
 
 Coordinate system such that the beam is at x=y=0
 
+\> define internal misalignments ?
+
 \caption{Alignment procedure}
 
 Three steps:
@@ -57,13 +59,13 @@ This also gives estimate about the rotation
 
 The collimation alignment is a part of the RP commissioning procedure, where the RPs are aligned with respect to the collimators of the LHC \TODO{reference}. Moreover it provides important data for the alignment of RPs themselves.
 
-We recall (from \Sc{ttm}) that the position of each RP is monitored by a linear voltage differential transformator (LVDT). This device measures the distance of the thin window from the beam-pipe axis. The position of the beam, again with respect to the beam-pipe axis, is measured by the beam position monitors (BPMs). There are two of them at each station: at the upstream end (near BPM) and at the downstream end (far BPM). For the collimation alignment one more tool is used -- a series of beam loss monitors (BLMs) measures the radiation (from beam losses) at several locations downstream of each station.
+We recall (from \Sc{ttm}) that the position of each RP is monitored by a linear voltage differential transformator (LVDT). This device measures the distance of the thin window from the beam-pipe axis. The position of the beam, again with respect to the beam-pipe axis, is measured by the beam position monitors (BPMs). There are two of them at each station: at the upstream end (near BPM) and at the downstream end (far BPM). Each BPM measures both horizontal and vertical beam position. For the collimation alignment one more tool is used -- a series of beam loss monitors (BLMs) measures the radiation (from beam losses) at several locations downstream of each station.
 
-At the beginning of the collimation alignment, the collimators scrape the beam at a given number $n$ of beam sigmas $\si_0$ (i.e. beam sigmas at the collimator location, see \Fg{al collim}). Due to the multi-turn effect, the beam is scraped symmetrically about the center of the beam. Thus after the scraping, the beam has sharp edges on both sides and consequently the beam width and center is well defined. Then, a RP is approached to the beam (see the top plot in \Fg{al collim ex}), until it touches its edge. At this moment, particles from the beam surface are scattered off the RP edge and give rise to peaks in the BLMs downstream (see \Fg{al collim ex} bottom). This is the moment where the RP (thin window) is at the same beam-sigma-distance $n$ as the collimators. Denoting the beam sigma at the RP location $\si$ (as in \Fg{al collim}), the RP position is $n\si$. The beam widths $\si_0$ and $\si$ are related via the optics and therefore the position of the beam can be calculated as
+At the beginning of the collimation alignment, the collimators scrape the beam at a given number $n$ of beam sigmas $\si_0$ (i.e. beam sigmas at the collimator location, see \Fg{al collim}). Due to the multi-turn effect, the beam is scraped symmetrically about the center of the beam. Thus after the scraping, the beam has sharp edges on both sides and consequently the beam width and center are well defined. Then, a RP is approached to the beam (see the top plot in \Fg{al collim ex}), until it touches its edge. At this moment, particles from the beam surface are scattered off the RP edge and give rise to peaks in the BLMs downstream (see \Fg{al collim ex} bottom). This is the moment where the RP (its thin window) is at the same beam-sigma-distance $n$ as the collimators. Denoting the beam sigma at the RP location $\si$ (as in \Fg{al collim}), the RP position is $n\si$. The beam widths $\si_0$ and $\si$ are related via the optics and therefore the position of the beam can be calculated as
 \eqref{n\si - t\ ,}{al vc m1}
 where $t$ denotes the corresponding LVDT reading.
 
-For the vertical beam's position one need not rely on the optics (which always includes certain uncertainty). Suppose that the top pot has just touched the beam (as in \Fg{al collim ex}). Then the bottom pot can be approached until a touch is signalized by the BLMs. At the moment of the touch, the beam center is right in between the pots. Thus the beam center can be calculated from the LVDT readings only ($t$ for the top, $b$ for the bottom RP):
+For the vertical beam position one need not rely on the optics (which always includes certain uncertainty). Suppose that the top pot has just touched the beam (as in \Fg{al collim ex}). Then the bottom pot can be approached until a touch is signalized by the BLMs. At the moment of the touch, the beam center is right in between the pots. Thus the beam center can be calculated from the LVDT readings only ($t$ for the top, $b$ for the bottom RP):
 \eqref{{t + b\over 2}\ .}{al vc m2}
 This procedure can be repeated few times (as shown in \Fg{al collim ex}) to improve the precision.
 
@@ -79,12 +81,12 @@ There was also an indication of a LVDT-related problem. As we have said, the ver
 
 All these methods can be reconciled by assuming that each LVDT scale has its own origin (offset), as shown in \Fg{al collim}. These offsets can easily be determined:
 \eqref{o_t = n\si - t,\qquad o_b = -n\si - b\ ,}{al lvdt offsets}
-where $t$ and $b$ are the top and bottom pot LVDT readings. Note that the offsets are given with respect to the beam center (not the beam-pipe center), which is, in fact, exactly what is needed. The offsets calculated after the collimation alignment on 21 September (see Tb.~1 in \bref{al collim}) are shown in \Tb{al lvdt off}. The uncertainty has two components -- from the step size (between $20$ and $50\un{\mu m}$) and from the calculation of the beam size $\si$, which is unfortunately difficult to estimate.
+where $t$ and $b$ are the top and bottom pot LVDT readings. Note that the offsets are given with respect to the beam center (not the beam-pipe center), which is, in fact, exactly what is needed. The offsets calculated after the collimation alignment on 21 September 2010 (see Tb.~1 in \bref{al collim}) are shown in \Tb{al lvdt off}. The uncertainty has two components -- from the step size (between $20$ and $50\un{\mu m}$) and from the calculation of the beam size $\si$, which is unfortunately difficult to estimate.
 
-\fig{fig/pdf/al_collim.pdf}{al collim}{A sketch of the collimation alignment including the LVDT-scale origins (drawn as red dots). The beam is drawn in blue, its envelope with solid and its center with dash-dotted line. The collimators scrape the beam at the distance of $n\si_0$, where $\si_0$ is the beam sigma at the collimator location. The RPs touch the beam at distance $n\si$, where $\si$ is the beam sigma at the RP location.}
+\fig{fig/pdf/al_collim.pdf}{al collim}{A sketch of the collimation alignment including the LVDT-scale origins (drawn as red dots). The beam is drawn in blue, its surface with solid and its center with dash-dotted line. The collimators scrape the beam at the distance of $n\si_0$, where $\si_0$ is the beam sigma at the collimator location. The RPs touch the beam at distance $n\si$, where $\si$ is the beam sigma at the RP location.}
 
 
-\htab{al lvdt off}{The LVDT offsets (values in $\un{mm}$). Positive/negative value means shift up/down (like in \Fg{al collim}).}{\bln
+\htab{al lvdt off}{The vertical LVDT offsets in millimeters, determined from the test on 21 September 2010. The signs follow $y$ axis in \Fg{al collim}.}{\bln
 \hbox{unit} & o_t & o_b \cr\bln
 \hbox{45-220-near} & +0.515 & +0.135\cr\ln
 \hbox{45-220-far} & +0.389 & +0.111\cr\bln
@@ -1112,11 +1114,11 @@ Let us investigate the stability a bit deeper. Since a comparison for all sensor
 \fig{fig/pdf/al_comp_rp_all_rot.pdf}{al comp rp all rot}{DP alignment comparison for 56-220-far unit (with the final constraints.) The order of points is the same as in \Tb{al lhc datasets} (top-down direction in both cases). The circles corresponds to the analyses with all tracks, the squares with overlap tracks only. For certain data sets the latter type of analyses have not yielded reasonable results, which have thus not been drawn. The vertical dashed lines mark the mean misalignments.
 }
 
-Returning to \Fg{al comp rp all rot}, we see that most shift corrections lie in a band of $\pm 10\un{\mu m}$ around the mean (the dashed vertical line). This a good result which could have been achieved only thanks to the reliability of the (corrected) LVDT measurements -- they establish the initial geometry for the track-based alignment. In fact, the mean values could be used to improve the corrections obtained in \Sc{al collim}. There, we have determined the corrections for the vertical positions of the vertical pots. Looking at the second row, one finds that track-based alignment brings a modification of $90\un{\mu m}$, which is below the uncertainty of the collimation alignment. \TODO{check}
+Returning to \Fg{al comp rp all rot}, we see that most shift corrections lie in a band of $\pm 10\un{\mu m}$ around the mean (the dashed vertical line). This a good result which could have been achieved only thanks to the reliability of the (corrected) LVDT measurements -- they establish the initial geometry for the track-based alignment. In fact, the mean values could be used to improve the corrections obtained in \Sc{al collim}. There, we have determined the corrections for the vertical positions of the vertical pots. Looking at the second row, one finds that track-based alignment brings a modification of $90\un{\mu m}$, which is of the expected order \Eq{al window to dp uncer}.
 
-Regarding the rotations, the situation is less homogeneous. Some rotations are very stable (all rotations of the horizontal pot), some less ($\rh_z$ of the two vertical pots). For the latter, the fluctuations go up to $\pm 0.4\un{mrad}$ from the mean. This is already an important rotation, which shall not be neglected. A quantitative summary of the rotations can be found in \Tb{al rp rot}. One can see the higher standard deviation of the $\rh_z$ rotations also there. \TODO{more text to the table?}
+Regarding the rotations, the situation is less homogeneous. Some rotations are very stable (all rotations of the horizontal pot), some less ($\rh_z$ of the two vertical pots). For the latter, the fluctuations go up to $\pm 0.4\un{mrad}$ from the mean. This is already an important rotation, which can not be neglected. A quantitative summary of all the DP rotations can be found in \Tb{al rp rot}. One can see $\rh_z$ rotations tend to have higher standard deviation, which means they tend to change more from a data set to another.
 
-\tab{al rp rot}{A summary of the DP rotations results (all values in $\rm mrad$). Only the analyses with all tracks (\pmt{requireOverlap} = False) have been included. The analyses with overlap tracks only have yielded rather large errors for sector 45. The values in the mean column correspond to the vertical dashed line in \Fg{al comp rp all rot}. $\si$ stands for the standard deviation of the results obtained from the individual datasets.
+\tab{al rp rot}{A summary of the DP rotations results (values in milliradians). Only the analyses with all tracks (\pmt{requireOverlap} = False) have been included. The analyses with overlap tracks only have yielded rather large errors for sector 45. The values in the mean column correspond to the vertical dashed line in \Fg{al comp rp all rot}. $\si$ stands for the standard deviation of the results obtained from the individual data sets.
 % weighted mean, non-weighted sigma
 }{
 \multispan3&\multispan6\bhrulefill\cr
@@ -1144,10 +1146,7 @@ Regarding the rotations, the situation is less homogeneous. Some rotations are v
 One may object that such a direct comparison of shifts as in \Fg{al comp rp all rot} is slightly misleading. Every rotation misalignment induces a shift correction, see \Eq{al sm rotz shr}. This correction is proportional to the distance of the sensor from the origin ($\vec c$). Thus, the correction would be different for different RP approaches (different data sets). From \Tb{al lhc datasets} one can read that the thin-window positions varied approximately from $2.6$ to $8\un{mm}$ for the vertical pots and from $2.3$ to $5.6\un{mm}$ for the horizontal pots. The span was thus of the order of $\De c \approx 4\un{mm}$. From the \Eq{al sm rotz shr} one could expect the rotation-induced shifts to vary by $\De c \De \rh$. Taking $\De\rh \approx 10 \un{mrad}$ (the scale of rotation results in \Fg{al comp det per unit}) yields a variation by about $40\un{\mu m}$. However, the variation is actually much smaller, MC simulations give the order of $5\un{\mu m}$. There are two reasons for this. First, the final constraints have been used. The mix shift and rotation degrees of freedom and make the calculation more complex. And second, the rotations of the top and bottom pots have nearly the same values but opposite signs. This leads to partial cancellations. To summarize, the shifts obtained from different data-takings can be compared with an uncertainty of $5\un{\mu m}$.
 
 
-\> conclusion
-
-\TODO{Generally - want to show that everything is stable and consistent}
-
+In this section we have reverified that one can not determine the rotation between the near and far unit with a reasonable precision. Then we have compared alignment results from a number of 2010 LHC runs. We have found the DP shifts very stable -- the change from run to another is of the order of $10\un{\mu m}$. The vertical DP shifts, as corrections to the collimation alignment presented in \Sc{al collim}, have the expected order \Eq{al window to dp uncer}. We have also determined all three DP rotations. Those about $x$ and $y$ axes have shown to be very stable too. However, the rotation about $z$ has presented non-negligible run-to-run variations (standard deviation up to about $0.2\un{mrad}$).
 
 
 \section[al prof]{Profile methods}
