--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1015,3 +1015,12 @@
       year         = "1990"
 		ISBN	   = "0-521-63548-9"
 }
+
+@book{lemieux,
+      author       = "Lemieux, Christiane",
+      title        = "Monte Carlo and Quasi-Monte Carlo Sampling",
+      publisher    = "Springer",
+      address      = "Dordrecht",
+      series       = "Springer Series in Statistics",
+      year         = "2009",
+}
